# telemetry-gen

./: Cargo.toml  README.md
crates/telem-gen/: Cargo.toml
crates/telem-gen/src/: coord.rs  lib.rs  model.rs
crates/telem-gen/src/protocol/: cot.rs  mod.rs  stanag_4586.rs
