[workspace]
resolver = "2"
members = [ "crates/*" ]

# Reduce debug-symbol info for dependencies by default, to save disk space.
[profile.dev.package."*"]
debug = "line-tables-only"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.package]
name = "telemetry-gen"
version = "0.1.0"
edition = "2021"

#documentation = ""
#homepage = ""
license = "Apache-2.0"
repository = "https://github.com/ajfabbri/telemetry-gen"
rust-version = "1.81.0"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "now"] }
cot-proto = { version = "0.3.7", features = ["tak"] }
nom = "7.1.3"
quick-xml = { version = "0.37.0", features = ["serde"] }
rand = "0.8"
thiserror = "2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
